--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         background-color: #f7e9e8;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
         padding: 20px 40px;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
       }
 
       nav {
@@ -96,7 +99,7 @@
         transform: scale(1.1);
       }
 
-      .links i {
+      .links  {
         color: #333;
         width: 24px;
         height: 24px;
