--- a/login.html
+++ b/login.html
@@ -6,13 +6,8 @@
     <title>Centered Login</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dancing+Script:wght@400..700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Grey+Qo&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
-      rel="stylesheet"
-    />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dancing+Script:wght@400..700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 </head>
 <body>
@@ -23,6 +18,7 @@
     <div class="container">
         <form method="post" action="">
             <h1 id="form-title">Login</h1>
+            
             <div id="login-fields">
                 <div class="input1">
                     <input type="text" name="username" id="user" placeholder="Username">
@@ -35,6 +31,7 @@
                     <a href="">Forgot Password?</a>
                 </div>
             </div>
+
             <div id="signup-fields" style="display:none;">
                 <div class="input1">
                     <input type="text" id="signup-name" placeholder="Name">
@@ -54,7 +51,7 @@
             </div>
         </form>
     </div>
-<div class="output"></div>
-<script src="script.js"></script>
+    <div class="output"></div>
+    <script src="script.js"></script>
 </body>
 </html>
